--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                     <ul class="list team__list card-set">
                         <li class="card-set__item team__item">
                           <picture>
-                            <source srcset="./image/index/member-1_mob_1x.jpg 1x, ./image/index/member-1_mob_2x.jpg 2x">
-                            <source srcset="./image/index/member-1_tab_1x.jpg 1x, ./image/index/member-1_tab_2x.jpg 2x" media="(min-width: 768px)">
+                            <source srcset="./image/index/member-1_mob_1x.jpg 1x, ./image/index/member-1_mob_2x.jpg 2x" media="(max-width: 767px)">
+                            <source srcset="./image/index/member-1_tab_1x.jpg 1x, ./image/index/member-1_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
                             <source srcset="./image/index/member-1_pc_1x.jpg 1x, ./image/index/member-1_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-1_mob_1x.jpg" alt="Фото Игоря Демьяненко">
                           </picture>
@@ -192,8 +192,8 @@
                         </li>
                         <li class="card-set__item team__item">
                           <picture>
-                            <source srcset="./image/index/member-2_mob_1x.jpg 1x, ./image/index/member-2_mob_2x.jpg 2x">
-                            <source srcset="./image/index/member-2_tab_1x.jpg 1x, ./image/index/member-2_tab_2x.jpg 2x" media="(min-width: 768px)">
+                            <source srcset="./image/index/member-2_mob_1x.jpg 1x, ./image/index/member-2_mob_2x.jpg 2x" media="(max-width: 767px)">
+                            <source srcset="./image/index/member-2_tab_1x.jpg 1x, ./image/index/member-2_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
                             <source srcset="./image/index/member-2_pc_1x.jpg 1x, ./image/index/member-2_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-2_mob_1x.jpg" alt="Фото Ольги Репиной">
                           </picture>
@@ -226,8 +226,8 @@
                         </li>
                         <li class="card-set__item team__item">
                           <picture>
-                            <source srcset="./image/index/member-3_mob_1x.jpg 1x, ./image/index/member-3_mob_2x.jpg 2x">
-                            <source srcset="./image/index/member-3_tab_1x.jpg 1x, ./image/index/member-3_tab_2x.jpg 2x" media="(min-width: 768px)">
+                            <source srcset="./image/index/member-3_mob_1x.jpg 1x, ./image/index/member-3_mob_2x.jpg 2x" media="(max-width: 767px)">
+                            <source srcset="./image/index/member-3_tab_1x.jpg 1x, ./image/index/member-3_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px">
                             <source srcset="./image/index/member-3_pc_1x.jpg 1x, ./image/index/member-3_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-3_mob_1x.jpg" alt="Фото Николая Тарасова">
                           </picture>
@@ -261,8 +261,8 @@
                         </li>
                         <li class="card-set__item team__item">
                           <picture>
-                            <source srcset="./image/index/member-4_mob_1x.jpg 1x, ./image/index/member-4_mob_2x.jpg 2x">
-                            <source srcset="./image/index/member-4_tab_1x.jpg 1x, ./image/index/member-4_tab_2x.jpg 2x" media="(min-width: 768px)">
+                            <source srcset="./image/index/member-4_mob_1x.jpg 1x, ./image/index/member-4_mob_2x.jpg 2x" media="(max-width: 767px)">
+                            <source srcset="./image/index/member-4_tab_1x.jpg 1x, ./image/index/member-4_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width:1199px)">
                             <source srcset="./image/index/member-4_pc_1x.jpg 1x, ./image/index/member-4_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-4_mob_1x.jpg" alt="Фото Михаила Ермакова">
                           </picture>
