--- a/portfolio.html
+++ b/portfolio.html
@@ -86,13 +86,10 @@
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                               <picture>
-                                <source srcset="./image/portfolio/port-1_mob_1x.jpg 1x, ./image/portfolio/port-1_mob_1x.jpg 2x" type="image/jpeg">
-                                <source srcset="./image/portfolio/port-1_tab_1x.jpg 1x, ./image/portfolio/port-1_tab_1x.jpg 2x"
-                                  media="(min-width: 768px)" type="image/jpeg">
-                                <source srcset="./image/portfolio/port-1_pc_1x.jpg 1x, ./image/portfolio/port-1_pc_1x.jpg 2x"
-                                  media="(min-width: 1200px)" type="image/jpeg">
-                                <img src="./image/portfolio/port-1_mob_1x.jpg" alt="Веб-сайт Технокряк"
-                                width="450" height="294">
+                                <source srcset="./image/portfolio/port-1_mob_1x.jpg 1x, ./image/portfolio/port-1_mob_2x.jpg 2x" media="(max-width: 767px)">
+                                <source srcset="./image/portfolio/port-1_tab_1x.jpg 1x, ./image/portfolio/port-1_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                <source srcset="./image/portfolio/port-1_pc_1x.jpg 1x, ./image/portfolio/port-1_pc_2x.jpg 2x" media="(min-width: 1200px)">
+                                <img src="./image/portfolio/port-1_mob_1x.jpg" alt="Веб-сайт Технокряк" width="450" height="294">
                               </picture>
                                 
                                 <div class="service__wrap">
@@ -111,12 +108,9 @@
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <picture>
-                                    <source srcset="./image/portfolio/port-2_mob_1x.jpg 1x, ./image/portfolio/port-2_mob_1x.jpg 2x"
-                                        media="(max-width: 480px)">
-                                    <source srcset="./image/portfolio/port-2_tab_1x.jpg 1x, ./image/portfolio/port-2_tab_1x.jpg 2x"
-                                        media="(min-width: 481px)">
-                                    <source srcset="./image/portfolio/port-2_pc_1x.jpg 1x, ./image/portfolio/port-2_pc_1x.jpg 2x"
-                                        media="(min-width: 769px)">
+                                    <source srcset="./image/portfolio/port-2_mob_1x.jpg 1x, ./image/portfolio/port-2_mob_2x.jpg 2x" media="(max-width: 767px)">
+                                    <source srcset="./image/portfolio/port-2_tab_1x.jpg 1x, ./image/portfolio/port-2_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                    <source srcset="./image/portfolio/port-2_pc_1x.jpg 1x, ./image/portfolio/port-2_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                     <img src="./image/portfolio/port-2_mob_1x.jpg" alt="Постер New Orlean vs Golden Star" width="450" height="294">
                                 </picture>
                                 <div class="service__wrap">
@@ -134,12 +128,9 @@
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <picture>
-                                  <source srcset="./image/portfolio/port-3_mob_1x.jpg 1x, ./image/portfolio/port-3_mob_1x.jpg 2x"
-                                    media="(max-width: 480px)">
-                                  <source srcset="./image/portfolio/port-3_tab_1x.jpg 1x, ./image/portfolio/port-3_tab_1x.jpg 2x"
-                                    media="(min-width: 481px)">
-                                  <source srcset="./image/portfolio/port-3_pc_1x.jpg 1x, ./image/portfolio/port-3_pc_1x.jpg 2x"
-                                    media="(min-width: 769px)">
+                                  <source srcset="./image/portfolio/port-3_mob_1x.jpg 1x, ./image/portfolio/port-3_mob_2x.jpg 2x" media="(max-width: 767px)">
+                                  <source srcset="./image/portfolio/port-3_tab_1x.jpg 1x, ./image/portfolio/port-3_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-3_pc_1x.jpg 1x, ./image/portfolio/port-3_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-3_mob_1x.jpg" alt="Ресторан Seafood" width="450" height="294">
                                 </picture>
                                 <div class="service__wrap">
@@ -157,12 +148,9 @@
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <picture>
-                                  <source srcset="./image/portfolio/port-4_mob_1x.jpg 1x, ./image/portfolio/port-4_mob_1x.jpg 2x"
-                                    media="(max-width: 480px)">
-                                  <source srcset="./image/portfolio/port-4_tab_1x.jpg 1x, ./image/portfolio/port-4_tab_1x.jpg 2x"
-                                    media="(min-width: 481px)">
-                                  <source srcset="./image/portfolio/port-4_pc_1x.jpg 1x, ./image/portfolio/port-4_pc_1x.jpg 2x"
-                                    media="(min-width: 769px)">
+                                  <source srcset="./image/portfolio/port-4_mob_1x.jpg 1x, ./image/portfolio/port-4_mob_2x.jpg 2x" media="(max-width: 767px)">
+                                  <source srcset="./image/portfolio/port-4_tab_1x.jpg 1x, ./image/portfolio/port-4_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-4_pc_1x.jpg 1x, ./image/portfolio/port-4_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-4_mob_1x.jpg" alt="Проект Prime" width="450" height="294">
                                 </picture>
                                 <div class="service__wrap">
@@ -180,12 +168,9 @@
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <picture>
-                                  <source srcset="./image/portfolio/port-5_mob_1x.jpg 1x, ./image/portfolio/port-5_mob_1x.jpg 2x"
-                                    media="(max-width: 480px)">
-                                  <source srcset="./image/portfolio/port-5_tab_1x.jpg 1x, ./image/portfolio/port-5_tab_1x.jpg 2x"
-                                    media="(min-width: 481px)">
-                                  <source srcset="./image/portfolio/port-5_pc_1x.jpg 1x, ./image/portfolio/port-5_pc_1x.jpg 2x"
-                                    media="(min-width: 769px)">
+                                  <source srcset="./image/portfolio/port-5_mob_1x.jpg 1x, ./image/portfolio/port-5_mob_2x.jpg 2x" media="(max-width: 767px)">
+                                  <source srcset="./image/portfolio/port-5_tab_1x.jpg 1x, ./image/portfolio/port-5_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-5_pc_1x.jpg 1x, ./image/portfolio/port-5_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-5_mob_1x.jpg" alt="Проект Boxes" width="450" height="294">
                                 </picture>
                                 <div class="service__wrap">
@@ -203,12 +188,9 @@
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <picture>
-                                  <source srcset="./image/portfolio/port-6_mob_1x.jpg 1x, ./image/portfolio/port-6_mob_1x.jpg 2x"
-                                    media="(max-width: 480px)">
-                                  <source srcset="./image/portfolio/port-6_tab_1x.jpg 1x, ./image/portfolio/port-6_tab_1x.jpg 2x"
-                                    media="(min-width: 481px)">
-                                  <source srcset="./image/portfolio/port-6_pc_1x.jpg 1x, ./image/portfolio/port-6_pc_1x.jpg 2x"
-                                    media="(min-width: 769px)">
+                                  <source srcset="./image/portfolio/port-6_mob_1x.jpg 1x, ./image/portfolio/port-6_mob_2x.jpg 2x" media="(max-width: 767px)">
+                                  <source srcset="./image/portfolio/port-6_tab_1x.jpg 1x, ./image/portfolio/port-6_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-6_pc_1x.jpg 1x, ./image/portfolio/port-6_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-6_mob_1x.jpg" alt="Inspiration has no Borders" width="450" height="294">
                                 </picture>
                                 <div class="service__wrap">
@@ -226,12 +208,9 @@
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <picture>
-                                  <source srcset="./image/portfolio/port-7_mob_1x.jpg 1x, ./image/portfolio/port-7_mob_1x.jpg 2x"
-                                    media="(max-width: 480px)">
-                                  <source srcset="./image/portfolio/port-7_tab_1x.jpg 1x, ./image/portfolio/port-7_tab_1x.jpg 2x"
-                                    media="(min-width: 481px)">
-                                  <source srcset="./image/portfolio/port-7_pc_1x.jpg 1x, ./image/portfolio/port-7_pc_1x.jpg 2x"
-                                    media="(min-width: 769px)">
+                                  <source srcset="./image/portfolio/port-7_mob_1x.jpg 1x, ./image/portfolio/port-7_mob_2x.jpg 2x" media="(max-width: 767px)">
+                                  <source srcset="./image/portfolio/port-7_tab_1x.jpg 1x, ./image/portfolio/port-7_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-7_pc_1x.jpg 1x, ./image/portfolio/port-7_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-7_mob_1x.jpg" alt="Издание Limited Edition" width="450" height="294">
                                 </picture>
                                 <div class="service__wrap">
@@ -249,12 +228,9 @@
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <picture>
-                                  <source srcset="./image/portfolio/port-8_mob_1x.jpg 1x, ./image/portfolio/port-8_mob_1x.jpg 2x"
-                                    media="(max-width: 480px)">
-                                  <source srcset="./image/portfolio/port-8_tab_1x.jpg 1x, ./image/portfolio/port-8_tab_1x.jpg 2x"
-                                    media="(min-width: 481px)">
-                                  <source srcset="./image/portfolio/port-8_pc_1x.jpg 1x, ./image/portfolio/port-8_pc_1x.jpg 2x"
-                                    media="(min-width: 769px)">
+                                  <source srcset="./image/portfolio/port-8_mob_1x.jpg 1x, ./image/portfolio/port-8_mob_2x.jpg 2x" media="(max-width: 767px)">
+                                  <source srcset="./image/portfolio/port-8_tab_1x.jpg 1x, ./image/portfolio/port-8_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-8_pc_1x.jpg 1x, ./image/portfolio/port-8_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-8_mob_1x.jpg" alt="Проект LAB" width="450" height="294">
                                 </picture>
                                 <div class="service__wrap">
@@ -272,12 +248,9 @@
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <picture>
-                                  <source srcset="./image/portfolio/port-9_mob_1x.jpg 1x, ./image/portfolio/port-9_mob_1x.jpg 2x"
-                                    media="(max-width: 480px)">
-                                  <source srcset="./image/portfolio/port-9_tab_1x.jpg 1x, ./image/portfolio/port-9_tab_1x.jpg 2x"
-                                    media="(min-width: 481px)">
-                                  <source srcset="./image/portfolio/port-9_pc_1x.jpg 1x, ./image/portfolio/port-9_pc_1x.jpg 2x"
-                                    media="(min-width: 769px)">
+                                  <source srcset="./image/portfolio/port-9_mob_1x.jpg 1x, ./image/portfolio/port-9_mob_2x.jpg 2x" media="(max-width: 767px)">
+                                  <source srcset="./image/portfolio/port-9_tab_1x.jpg 1x, ./image/portfolio/port-9_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-9_pc_1x.jpg 1x, ./image/portfolio/port-9_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-9_mob_1x.jpg" alt="Growing Business" width="450" height="294">
                                 </picture>
                                 <div class="service__wrap">
