--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
                             <div class="service__thumb">
                               <picture>
                                 <source srcset="./image/portfolio/port-1_mob_1x.jpg 1x, ./image/portfolio/port-1_mob_2x.jpg 2x" media="(max-width: 767px)">
-                                <source srcset="./image/portfolio/port-1_tab_1x.jpg 1x, ./image/portfolio/port-1_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                <source srcset="./image/portfolio/port-1_tab_1x.jpg 1x, ./image/portfolio/port-1_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                                 <source srcset="./image/portfolio/port-1_pc_1x.jpg 1x, ./image/portfolio/port-1_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                 <img src="./image/portfolio/port-1_mob_1x.jpg" alt="Веб-сайт Технокряк" width="450" height="294">
                               </picture>
@@ -109,7 +109,7 @@
                             <div class="service__thumb">
                                 <picture>
                                     <source srcset="./image/portfolio/port-2_mob_1x.jpg 1x, ./image/portfolio/port-2_mob_2x.jpg 2x" media="(max-width: 767px)">
-                                    <source srcset="./image/portfolio/port-2_tab_1x.jpg 1x, ./image/portfolio/port-2_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                    <source srcset="./image/portfolio/port-2_tab_1x.jpg 1x, ./image/portfolio/port-2_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                                     <source srcset="./image/portfolio/port-2_pc_1x.jpg 1x, ./image/portfolio/port-2_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                     <img src="./image/portfolio/port-2_mob_1x.jpg" alt="Постер New Orlean vs Golden Star" width="450" height="294">
                                 </picture>
@@ -129,7 +129,7 @@
                             <div class="service__thumb">
                                 <picture>
                                   <source srcset="./image/portfolio/port-3_mob_1x.jpg 1x, ./image/portfolio/port-3_mob_2x.jpg 2x" media="(max-width: 767px)">
-                                  <source srcset="./image/portfolio/port-3_tab_1x.jpg 1x, ./image/portfolio/port-3_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-3_tab_1x.jpg 1x, ./image/portfolio/port-3_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                                   <source srcset="./image/portfolio/port-3_pc_1x.jpg 1x, ./image/portfolio/port-3_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-3_mob_1x.jpg" alt="Ресторан Seafood" width="450" height="294">
                                 </picture>
@@ -149,7 +149,7 @@
                             <div class="service__thumb">
                                 <picture>
                                   <source srcset="./image/portfolio/port-4_mob_1x.jpg 1x, ./image/portfolio/port-4_mob_2x.jpg 2x" media="(max-width: 767px)">
-                                  <source srcset="./image/portfolio/port-4_tab_1x.jpg 1x, ./image/portfolio/port-4_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-4_tab_1x.jpg 1x, ./image/portfolio/port-4_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                                   <source srcset="./image/portfolio/port-4_pc_1x.jpg 1x, ./image/portfolio/port-4_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-4_mob_1x.jpg" alt="Проект Prime" width="450" height="294">
                                 </picture>
@@ -169,7 +169,7 @@
                             <div class="service__thumb">
                                 <picture>
                                   <source srcset="./image/portfolio/port-5_mob_1x.jpg 1x, ./image/portfolio/port-5_mob_2x.jpg 2x" media="(max-width: 767px)">
-                                  <source srcset="./image/portfolio/port-5_tab_1x.jpg 1x, ./image/portfolio/port-5_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-5_tab_1x.jpg 1x, ./image/portfolio/port-5_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                                   <source srcset="./image/portfolio/port-5_pc_1x.jpg 1x, ./image/portfolio/port-5_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-5_mob_1x.jpg" alt="Проект Boxes" width="450" height="294">
                                 </picture>
@@ -189,7 +189,7 @@
                             <div class="service__thumb">
                                 <picture>
                                   <source srcset="./image/portfolio/port-6_mob_1x.jpg 1x, ./image/portfolio/port-6_mob_2x.jpg 2x" media="(max-width: 767px)">
-                                  <source srcset="./image/portfolio/port-6_tab_1x.jpg 1x, ./image/portfolio/port-6_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-6_tab_1x.jpg 1x, ./image/portfolio/port-6_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                                   <source srcset="./image/portfolio/port-6_pc_1x.jpg 1x, ./image/portfolio/port-6_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-6_mob_1x.jpg" alt="Inspiration has no Borders" width="450" height="294">
                                 </picture>
@@ -209,7 +209,7 @@
                             <div class="service__thumb">
                                 <picture>
                                   <source srcset="./image/portfolio/port-7_mob_1x.jpg 1x, ./image/portfolio/port-7_mob_2x.jpg 2x" media="(max-width: 767px)">
-                                  <source srcset="./image/portfolio/port-7_tab_1x.jpg 1x, ./image/portfolio/port-7_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-7_tab_1x.jpg 1x, ./image/portfolio/port-7_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                                   <source srcset="./image/portfolio/port-7_pc_1x.jpg 1x, ./image/portfolio/port-7_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-7_mob_1x.jpg" alt="Издание Limited Edition" width="450" height="294">
                                 </picture>
@@ -229,7 +229,7 @@
                             <div class="service__thumb">
                                 <picture>
                                   <source srcset="./image/portfolio/port-8_mob_1x.jpg 1x, ./image/portfolio/port-8_mob_2x.jpg 2x" media="(max-width: 767px)">
-                                  <source srcset="./image/portfolio/port-8_tab_1x.jpg 1x, ./image/portfolio/port-8_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-8_tab_1x.jpg 1x, ./image/portfolio/port-8_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                                   <source srcset="./image/portfolio/port-8_pc_1x.jpg 1x, ./image/portfolio/port-8_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-8_mob_1x.jpg" alt="Проект LAB" width="450" height="294">
                                 </picture>
@@ -249,7 +249,7 @@
                             <div class="service__thumb">
                                 <picture>
                                   <source srcset="./image/portfolio/port-9_mob_1x.jpg 1x, ./image/portfolio/port-9_mob_2x.jpg 2x" media="(max-width: 767px)">
-                                  <source srcset="./image/portfolio/port-9_tab_1x.jpg 1x, ./image/portfolio/port-9_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                                  <source srcset="./image/portfolio/port-9_tab_1x.jpg 1x, ./image/portfolio/port-9_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                                   <source srcset="./image/portfolio/port-9_pc_1x.jpg 1x, ./image/portfolio/port-9_pc_2x.jpg 2x" media="(min-width: 1200px)">
                                   <img src="./image/portfolio/port-9_mob_1x.jpg" alt="Growing Business" width="450" height="294">
                                 </picture>
