--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <li class="card-set__item team__item">
                           <picture>
                             <source srcset="./image/index/member-1_mob_1x.jpg 1x, ./image/index/member-1_mob_2x.jpg 2x" media="(max-width: 767px)">
-                            <source srcset="./image/index/member-1_tab_1x.jpg 1x, ./image/index/member-1_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                            <source srcset="./image/index/member-1_tab_1x.jpg 1x, ./image/index/member-1_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                             <source srcset="./image/index/member-1_pc_1x.jpg 1x, ./image/index/member-1_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-1_mob_1x.jpg" alt="Фото Игоря Демьяненко">
                           </picture>
@@ -193,7 +193,7 @@
                         <li class="card-set__item team__item">
                           <picture>
                             <source srcset="./image/index/member-2_mob_1x.jpg 1x, ./image/index/member-2_mob_2x.jpg 2x" media="(max-width: 767px)">
-                            <source srcset="./image/index/member-2_tab_1x.jpg 1x, ./image/index/member-2_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px)">
+                            <source srcset="./image/index/member-2_tab_1x.jpg 1x, ./image/index/member-2_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                             <source srcset="./image/index/member-2_pc_1x.jpg 1x, ./image/index/member-2_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-2_mob_1x.jpg" alt="Фото Ольги Репиной">
                           </picture>
@@ -227,7 +227,7 @@
                         <li class="card-set__item team__item">
                           <picture>
                             <source srcset="./image/index/member-3_mob_1x.jpg 1x, ./image/index/member-3_mob_2x.jpg 2x" media="(max-width: 767px)">
-                            <source srcset="./image/index/member-3_tab_1x.jpg 1x, ./image/index/member-3_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width: 1199px">
+                            <source srcset="./image/index/member-3_tab_1x.jpg 1x, ./image/index/member-3_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                             <source srcset="./image/index/member-3_pc_1x.jpg 1x, ./image/index/member-3_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-3_mob_1x.jpg" alt="Фото Николая Тарасова">
                           </picture>
@@ -262,7 +262,7 @@
                         <li class="card-set__item team__item">
                           <picture>
                             <source srcset="./image/index/member-4_mob_1x.jpg 1x, ./image/index/member-4_mob_2x.jpg 2x" media="(max-width: 767px)">
-                            <source srcset="./image/index/member-4_tab_1x.jpg 1x, ./image/index/member-4_tab_2x.jpg 2x" media="(min-width: 768px)" media="(max-width:1199px)">
+                            <source srcset="./image/index/member-4_tab_1x.jpg 1x, ./image/index/member-4_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width:1199px)">
                             <source srcset="./image/index/member-4_pc_1x.jpg 1x, ./image/index/member-4_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-4_mob_1x.jpg" alt="Фото Михаила Ермакова">
                           </picture>
