--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,6 @@
                     <use class="burger__close" href="./image/burger.svg#icon-burger-close"></use>
                 </svg>
             </button>
-            <script src="./js/mobile-menu.js"></script>
         </div>
     </header>
 
@@ -322,6 +321,8 @@
             </div>
         </div>
     </footer>
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
